# examples-code

./: .gitignore  README.md
clean-archi-demo/: Makefile  Procfile  README.md  pyproject.toml  requirements.txt
clean-archi-demo/project/application/: app.py  models.py
clean-archi-demo/project/application/routers/: user.py
clean-archi-demo/project/domain/: entities.py  exceptions.py  repository.py  service.py
clean-archi-demo/project/domain/utils/: singleton.py
clean-archi-demo/project/infra/: project_infra.py
clean-archi-demo/project/infra/aws/: repository.py
clean-archi-demo/project/infra/memory/: repository.py
clean-archi-demo/tests/domain/: test_service.py
clean-archi-demo/tests/infra/aws/: conftest.py  test_repository_dynamodb.py
fastapi-in-aws-lambda/: README.md  app.py  test_app.py
fastapi-in-aws-lambda/project/: pyproject.toml  test_app.py
fastapi-in-aws-lambda/project/docker/: Dockerfile
fastapi-in-aws-lambda/project/fastapi_in_aws_lambda/: app.py  handler.py
fastapi-in-aws-lambda/terraform/: main.tf
tests-unitaires-aws-moto/: README.md  pyproject.toml
tests-unitaires-aws-moto/project/: cli.py  models.py  service.py
tests-unitaires-aws-moto/tests/: conftest.py  test_service.py
