[tool.poetry]
name = "tests-unitaires-aws-moto"
version = "0.1.0"
description = ""
authors = ["srault95 <stephane.rault@radicalspam.org>"]
license = "MIT"
packages = [
    { include = "project" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
boto3 = "^1.28.44"
boto3-stubs = {extras = ["dynamodb", "s3"], version = "^1.28.44"}
pydantic = "^2.3.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic-settings = "2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.1"
moto = "^4.2.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"